# wasm-loop-player

./: .gitignore  Cargo.toml  README.md  build.sh  index.html
audio/: amen.flac  ir.flac
js/: setup.js  worklet.js  worklet_js.js
src/: binaural_loop_player.rs  lib.rs  loop_player.rs
src/binaural_loop_player/: ambisonics.rs  binauralizer.rs  loop_player.rs
src/binaural_loop_player/binauralizer/: convolver.rs
wasm/: wasm_loop_player.wasm
