[package]
name = "wasm-loop-player"
version = "0.1.0"
authors = ["nik <nik@parkellipsen.de>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.2.0"
wee_alloc = { version = "0.4.2", optional = true }
num = "0.2.0"
chfft = "0.2.4"

[dev-dependencies]
assert_approx_eq = "1.1.0"